# matrixfall

./: Cargo.toml  README.md
.github/: release.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: events.rs  main.rs  symbols.rs
src/helpers/: colors.rs  utils.rs
src/matrix/: entity.rs  mod.rs  stream.rs
