[package]
name = "matrixfall"
version = "0.3.0"
description = "The matrixfall effect in the terminal"
authors = ["Shresht7"]
repository = "https://github.com/Shresht7/matrixfall"
license = "MIT"
keywords = ["cli", "command-line-utilities", "matrixfall"]
categories = ["command-line-utilities"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.10.2"
