[package]
name = "matrixfall"
version = "0.4.0"
description = "The matrixfall effect in the terminal"
authors = ["Shresht7"]
repository = "https://github.com/Shresht7/matrixfall"
license = "MIT"
keywords = ["cli", "matrixfall"]
categories = ["command-line-utilities"]
edition = "2024"
exclude = [".github/*", ".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.10.2"
